@startuml
package [..] as C_0016431317663134048372 {
package [src] as C_0010634688166860467214 {
package [models] as C_0001626712604113445200 {
abstract "::Item" as C_0005967165952864249862
abstract C_0005967165952864249862 {
+Item() : void
+Item(std::string_view name, std::string_view desc, int default_price, int add_price = 0) : void
+~Item() = default : void
..
+addToPrice(int add) : void
+getDesc() const : const std::string &
{abstract} +getItemType() const = 0 : ItemType
+getName() const : const std::string &
+getPrice() const : int
+getPriceModified() const : int
+getQualityPrice() const : int
+setDefaultDesc() : void
+setDefaultPrice() : void
+setDesc(std::string_view d) : void
+setName(std::string_view n) : void
+setQualityPrice(int q_price) : void
+toJson() const : QJsonObject
__
#_default_price : const int
#_desc : std::string
#_name : std::string
#_price : int
#_quality_price : int
}
class "::Quality" as C_0017759373907162862278
class C_0017759373907162862278 {
+Quality() : void
+Quality(const std::string_view _desc, const int _cost_add, const bool _isOffensive) : void
__
+cost_add : int
+desc : std::string
+isOffensive : bool
}
}
package [systems] as C_0016692703261607978348 {
class "::QualityGenerator" as C_0017722926631985697211
class C_0017722926631985697211 {
+QualityGenerator(const QString & file_path) : void
..
+applyRandomQualityTo(Item * item) : void
+generate() : const Quality &
__
-_cache_qualities : std::vector<Quality>
}
class "::ItemGeneratorSystem" as C_0003751086353887321154
class C_0003751086353887321154 {
+ItemGeneratorSystem() : void
..
+assignQuality(ItemType type, Item * item) : void
+generateItem(ItemType type, const Player & player) : std::unique_ptr<Item>
{static} -getRandomItemType() : ItemType
{static} -isItemPriceValid(const Item & item, const Player & player) : bool
__
-quality_gen : std::map<ItemType,std::unique_ptr<QualityGenerator>>
-strategies : std::map<ItemType,std::unique_ptr<GeneratorStrategy>>
}
}
}
}
C_0017722926631985697211 ..> C_0005967165952864249862
C_0017722926631985697211 o-- C_0017759373907162862278 : -_cache_qualities
C_0003751086353887321154 ..> C_0005967165952864249862
C_0003751086353887321154 o-- C_0017722926631985697211 : -quality_gen

'Generated with clang-uml, version 0.6.2
'LLVM version clang version 20.1.7 (https://github.com/llvm/llvm-project.git 6146a88f60492b520a36f8f8f3231e15f3cc6082)
@enduml
